# sofastats

./: .gitignore  0_minify_sofalite.py  README.md  pyproject.toml
example_scripts/: anova.py  anova_all_settings_shown.py  app.py  chooser_poc.py  conf.py  data.py  flex.py  modal_experiment.py  sports.csv  state.py  stats.py  stats_chooser.py  stats_config.py  truffles.py  ui.py
src/sofastats/: __init__.py
src/sofastats/conf/: images.py  main.py  var_labels.py
src/sofastats/data_extraction/: interfaces.py  utils.py
src/sofastats/data_extraction/charts/: boxplot.py  freq_spec_interfaces.py  interfaces_freq_spec.py  scatterplot.py  xy_interfaces.py
src/sofastats/data_extraction/stats/: anova.py  chi_square.py  kruskal_wallis_h.py  spearmansr.py  ttest_indep.py
src/sofastats/demos/: demo_charts.py  demo_custom_styles.py  demo_stats.py  demo_tbls.py  make_fake_data.py
src/sofastats/output/: interfaces.py  utils.py
src/sofastats/output/charts/: area.py  bar.py  box_plot.py  boxplot.py  histogram.py  interfaces.py  line.py  mpl_pngs.py  pie.py  scatterplot.py  utils.py
src/sofastats/output/js/: sofalitedojo_minified.js
src/sofastats/output/stats/: anova.py  chi_square.py  common.py  interfaces.py  kruskal_wallis_h.py  mann_whitney_u.py  msgs.py  normality.py  pearsons_r.py  pearsonsr.py  spearmans_r.py  spearmansr.py  ttest_indep.py  ttest_paired.py  wilcoxon_signed_ranks.py
src/sofastats/output/styles/: default.py  grey_spirals.py  prestige_screen.py  two_degrees.py  utils.py
src/sofastats/output/tables/: cross_tab.py  freq.py
src/sofastats/output/tables/utils/: multi_index_sort.py
src/sofastats/stats_calc/: chi_square.py  engine.py  interfaces.py
src/sofastats/ui/: conf.py  data.py  panel_server.py  state.py  ui.py
src/sofastats/ui/stats/: anova_form.py  stats_chooser.py  stats_tab.py
src/sofastats/ui/ui_template/: chocolate.html
src/sofastats/utils/: misc.py
store/: var_labels.yaml
tests/: test_sofalite.py
validation/: make_fake_data.py
validation/checks_against_demo_tbl/: demo_charts.py  demo_combined.py  demo_custom_styles.py  demo_stats.py  demo_tbls.py
