[project]
name = "sofastats"
version = "0.10.2"
description = "sofastats - Statistics Open For All the Python Library"
authors = [
    { name = "Grant Paton-Simpson", email = "grant@sofastatistics.com" }
]
dependencies = [
    "panel>=1.7.5",
    "sofastats_lib>=0.10.1",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = ["Development Status :: 1 - Planning"]

[project.scripts]
sofastats = "sofastats.ui.panel_server:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build-backend]
exclude = [
    "docs/*", "example_scripts/*", "store/*", "validation/*", "tests/*",
    "uv.lock", "0_minify_sofastats.py", "requirements*",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

link-mode = "symlink"
default-groups = ["test", "dev"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sofastats"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
xfail_strict = true
log_cli_level = "INFO"
minversion = "7"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
test = [
    "pytest>=8.4.1",
]
